# feedbk-mcp-server

./: LICENSE  README.md  pyproject.toml  server.py
skills/feedbk-survey-interview/: SKILL.md
